tests/baselines/reference/tsxSpreadAttributesResolution16.errors.txt
tests/cases/conformance/jsx/file.tsx(11,27): error TS2322: Type '{ property1: string; property2: number; }' is not assignable to type 'IntrinsicAttributes & AnotherComponentProps'.
  Type '{ property1: string; property2: number; }' is not assignable to type 'AnotherComponentProps'.
    Property 'AnotherProperty1' is missing in type '{ property1: string; property2: number; }'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    interface ComponentProps {
        property1: string;
        property2: number;
    }
    
    export default function Component(props: ComponentProps) {
        return (
            // Error: missing property
            <AnotherComponent {...props} />
                              ~~~~~~~~~~
!!! error TS2322: Type '{ property1: string; property2: number; }' is not assignable to type 'IntrinsicAttributes & AnotherComponentProps'.
!!! error TS2322:   Type '{ property1: string; property2: number; }' is not assignable to type 'AnotherComponentProps'.
!!! error TS2322:     Property 'AnotherProperty1' is missing in type '{ property1: string; property2: number; }'.
        );
    }
    
    interface AnotherComponentProps {
        property1: string;
        AnotherProperty1: string;
        property2: boolean;
    }
    
    function AnotherComponent({ property1 }: AnotherComponentProps) {
        return (
            <span>{property1}</span>
        );
    }